--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
   </div>
 
   <div class="thumbnail-wrapper">
-    <button class="thumb-btn prev">&#10094;</button>
+    <button class="thumb-btn prev" onclick="scrollThumbnails(-1)">&#10094;</button>
     <div class="thumbnails" id="thumbnails">
       <img src="./img file/photo2.jpg" alt="썸네일1" onclick="changeMain(this)">
       <img src="./img file/photo3.jpg" alt="썸네일3" onclick="changeMain(this)">
@@ -913,6 +913,7 @@ function copyText(value) {
   alert("계좌번호가 복사되었습니다.");
 }
 </script>
+
 
 
 
