--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
           <a class="btn naver" target="_blank"
             href="https://map.naver.com/v5/directions/-/14136330.452653716,4511642.906872074,%ED%98%B8%ED%85%94%EB%82%98%EB%A3%A8%20%EC%84%9C%EC%9A%B8%20%EC%97%A0%EA%B0%A4%EB%9F%AC%EB%A6%AC,1146592039,PLACE_POI/-/car?c=15,0,0,0,dh">네이버 길찾기</a>
           <a class="btn kakao" target="_blank"
-            href="https://map.kakao.com/link/to/호텔나루서울엠갤러리,37.526016,126.992560">카카오 길찾기</a>
+            href="https://map.kakao.com/link/to/호텔 나루 서울 엠갤러리 앰배서더,37.526016,126.992560">카카오 길찾기</a>
         </div>          
         <div style="text-align: left;">지하철 안내    
         <p>5호선 마포역 4번 출구에서 290m <br>도보 5분 거리</p></div>    
@@ -912,6 +912,7 @@ function copyText(value) {
   alert("계좌번호가 복사되었습니다.");
 }
 </script>
+
 
 
 
