--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.7585795531263!2d126.94169181196227!3d37.5371878719297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c990e87646059%3A0xd66235e87e1af8e3!2z7Zi47YWUIOuCmOujqCDshJzsmrgg7Jeg6rCk65-s66asIOyVsOuwsOyEnOuNlA!5e0!3m2!1sko!2skr!4v1760876485851!5m2!1sko!2skr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           <div class="btn-group">
           <a class="btn naver" target="_blank"
-            href="https://map.naver.com/v5/directions/-/14136330.452653716,4511642.906872074,%ED%98%B8%ED%85%94%EB%82%98%EB%A3%A8%20%EC%84%9C%EC%9A%B8%20%EC%97%A0%EA%B0%A4%EB%9F%AC%EB%A6%AC,1146592039,PLACE_POI/-/car?c=15,0,0,0,dh">네이버 길찾기</a>
+            href="https://map.naver.com/p/directions/-/14131372.6421146,4514287.4718012,%ED%98%B8%ED%85%94%20%EB%82%98%EB%A3%A8%20%EC%84%9C%EC%9A%B8%20%EC%97%A0%EA%B0%A4%EB%9F%AC%EB%A6%AC,1923905766,PLACE_POI/-/car?c=15.00,0,0,0,dh">네이버 길찾기</a>
           <a class="btn kakao" target="_blank"
             href="https://map.kakao.com/link/to/호텔 나루 서울 엠갤러리 앰배서더,37.526016,126.992560">카카오 길찾기</a>
         </div>          
@@ -912,6 +912,7 @@ function copyText(value) {
   alert("계좌번호가 복사되었습니다.");
 }
 </script>
+
 
 
 
